fixed spacing on heading and footer

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -8,7 +8,8 @@
   cursor: pointer;
 
   &:hover,
-  &:focus {
+  &:focus,
+  &:focus-visible {
     opacity: 0.5;
   }
 
