--- a/src/styles/components/_site-foot.scss
+++ b/src/styles/components/_site-foot.scss
@@ -1,4 +1,5 @@
 .site-foot {
+  padding-block: var(--spacing-lg);
   background-color: var(--color-blue-900);
 
   &__inner {
