--- a/src/styles/components/_site-head.scss
+++ b/src/styles/components/_site-head.scss
@@ -1,4 +1,6 @@
 .site-head {
+  padding-block: var(--spacing-lg);
+
   &__inner {
     --align: center;
     --justify: space-between;
